[tool.poetry]
name = "kyc-onboarding"
version = "0.1.0"
description = "KYC Onboarding Microservice"
authors = ["Developer Agent <dev-agent@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.4.2"
SQLAlchemy = "^2.0.21"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
alembic = "^1.12.0"
greenlet = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
